--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GnuPlotDotNetLib\GnuPlotDotNetLib.csproj" />
+    <ProjectReference Include="..\GnuPlotDotNetLib\GnuPlotDotNetLibCore.csproj" />
   </ItemGroup>
 
 </Project>
